# LAC

./: .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: macos.yaml  memcheck.yaml  ubuntu.yaml
cmake/: LACConfig.cmake  LACDirs.cmake  add_unit_test.cmake  add_unit_test_mpi.cmake
include/: lac_BlockCRSMatrix.hpp  lac_Default.hpp  lac_Direct.hpp  lac_Error.hpp  lac_GMRES.hpp  lac_LinearAlgebra.hpp  lac_MPI.hpp  lac_MatrixMath.hpp  lac_Norms.hpp  lac_Structs.hpp  lac_Version.hpp  unit_test_framework.h
src/: CMakeLists.txt  lac_BlockCRSMatrix.cpp  lac_Default.cpp  lac_Direct.cpp  lac_GMRES.cpp  lac_LinearAlgebra.cpp  lac_MPI.cpp  lac_MatrixMath.cpp  lac_Norms.cpp  lac_Version.cpp
test/: CMakeLists.txt  test_BlockCRSMatrix.cpp  test_DirectSolve.cpp  test_DotProduct.cpp  test_GMRES.cpp  test_InvertMatrix.cpp  test_MPI.cpp  test_MatMatMult.cpp  test_MatVecMult.cpp  test_Norms.cpp
